# Idea-Crucible

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  claude_agent.py  cli.py  engine.py  llm.py  main.py  schemas.py
benchmarks/triage/: pilot.jsonl  schema.json
config/: model.local.yaml.example  model.yaml  modes.yaml  weights.yaml
config/rules/core/: 01_tech_impossibility.yaml  02_unit_economics.yaml  03_data_inaccessible.yaml  04_regulatory_block.yaml  05_platform_dependency.yaml  06_distribution_unreachable.yaml  07_two_sided_no_standalone.yaml  08_no_moat.yaml  09_ethics_safety.yaml  10_time_to_proof.yaml
ideas/: demo-idea.yaml  doxxing-platform.yaml  ideology-benchmark.yaml  simple-tool.yaml  test-empty-fields.yaml  test-idea.yaml  two-sided-no-utility.yaml  一个大模型意识形态倾向benchmark.yaml  一个电工辅助实时多模态agnet助手，语音交互。.yaml  一句话-想法.yaml  为现场电工提供实时、多模态（语音、视觉）的故障诊断、操作指导和知识检索支持，提高维修效率和准确性。.yaml  想法链条推演可视化.yaml
reports/benchmarks/pilot/: details.jsonl  summary.json
scripts/: batch_evaluate.py  expand_wizard.py  gen_examples.py  local_llm_basic.py  new_rule.py  sync_verdicts.py  wizard.py
templates/: llm_prompt.txt  report.en.md  report.md
tests/: rules_schema.py  smoke.py  test_llm_basic.py
