[project]
name = "idea-crucible"
version = "0.1.0"
description = "Redline-first, logic-based feasibility evaluator for startup ideas"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Idea-Crucible" }
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "openai>=1.40.0",
  "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
intake = "agent.cli:intake_entry"
evaluate = "agent.cli:evaluate_entry"
report = "agent.cli:report_entry"
# uv uses [project] dependencies by default; no custom groups needed.
